  ###################################
##### Changed in Scannomatic 0.992 #####
   ###################################

*** Fixture view is now decent.

*** User guide for setting up experiment putting plates in right positions
    implemented.

*** Fixture GUI view is better now... not yet perfect

*** Implemented grid-lock, that once set the grid stays where it is relative
    to plate edges (this is probably less robust if plates are moved within
    the fixture, but will probably produce less noise if plates stay in place)

*** The identifier property of analysis-objects now is build as follows as
    far as is applicable to a certain object:

        [[time_index, plate], [row, column], cell-item]


  ###################################
##### Changed in Scannomatic 0.991 #####
   ###################################

*** Most files were renamed for better structure:
 rename 2011.Scannomatic/src/{project.py => analysis.py} (99%)
 rename 2011.Scannomatic/src/{grid_array.py => analysis_grid_array.py} (98%)
 rename 2011.Scannomatic/src/{grid_array_analysis.py => analysis_grid_array_dissection.py} (99%)
 rename 2011.Scannomatic/src/{grid_cell.py => analysis_grid_cell.py} (96%)
 rename 2011.Scannomatic/src/{grid_cell_analysis.py => analysis_grid_cell_dissection.py} (99%)
 rename 2011.Scannomatic/src/{colonies_wrapper.py => analysis_wrapper.py} (96%)
 rename 2011.Scannomatic/src/{analysis.py => gui_analysis.py} (98%)
 rename 2011.Scannomatic/src/{experiment.py => gui_experiment.py} (98%)
 rename 2011.Scannomatic/src/{fixture.py => gui_fixture.py} (98%)
 rename 2011.Scannomatic/src/{settings.py => gui_settings.py} (99%)
 rename 2011.Scannomatic/src/{calibration.py => resource_calbration.py} (100%)
 rename 2011.Scannomatic/src/{simple_conf.py => resource_config.py} (100%)
 rename 2011.Scannomatic/src/{settings_tools.py => resource_fixture.py} (98%)
 rename 2011.Scannomatic/src/{gs_plot.py => resource_gs_plot.py} (99%)