@@ -18359,4 +18359,124 @@
 *
 * 
 
+*** ERROR
+* 28 Feb 2012 10:50:18
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** ERROR
+* 28 Feb 2012 10:50:58
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 10:51:07
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 10:51:42
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 10:52:28
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 10:52:31
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 10:52:37
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 10:53:51
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 10:53:54
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 10:54:00
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 10:54:16
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 10:54:25
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 10:54:32
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 11:08:06
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 11:08:11
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 11:08:20
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 11:10:44
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** SETTINGS
+* 28 Feb 2012 11:10:46
+*
+* Application Settings Activated
+
+*** TERMINATING
+* 28 Feb 2012 11:11:14
+*
+* 
+
+*** ERROR
+* 28 Feb 2012 13:52:17
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** FIXTURE
+* 28 Feb 2012 13:52:22
+*
+* Activated
+
+*** TERMINATING
+* 28 Feb 2012 13:57:00
+*
+* 
+
+*** ERROR
+* 05 Mar 2012 11:34:07
+*
+* There's something wrong with the grayscale. Switching to manual
+
+*** TERMINATING
+* 05 Mar 2012 11:35:19
+*
+* 
+
 
