@@ -2,6 +2,8 @@
 ##### Changed in Scannomatic 0.992 #####
    ###################################
 
+*** Made GUI-function DMS redirect upwards towards scannomatic
+
 *** Fixture view is now decent.
 
 *** User guide for setting up experiment putting plates in right positions
